базовая верстка, mobile first

--- a/source/index.html
+++ b/source/index.html
@@ -7,14 +7,299 @@
     <title>Главная - Дорстроймонтаж</title>
   </head>
   <body>
+
     <header class="header">
-
+      <div class="header__top">
+        <a class="header__logo" href="#">
+          <img src="" alt="ДорСтройМонтаж">
+        </a>
+        <button class="header__menu-button" type="button">
+          <span class="visually-hidden">Меню</span>
+        </button>
+        <div class="header__dropdown">
+          <nav class="header__navigation">
+            <ul class="header__menu">
+              <li class="header__menu-item">
+                <button class="header__submenu-button" type="button">Каталог</button>
+                <ul class="header__submenu">
+                  <li class="header__submenu-item"><a href="#" class="header__submenu-link">Стандартные дорожные знаки</a></li>
+                  <li class="header__submenu-item"><a href="#" class="header__submenu-link">Светодиодные дорожные знаки</a></li>
+                  <li class="header__submenu-item"><a href="#" class="header__submenu-link">Заградительные светодиодные знаки</a></li>
+                  <li class="header__submenu-item"><a href="#" class="header__submenu-link">Временные дорожные знаки</a></li>
+                  <li class="header__submenu-item"><a href="#" class="header__submenu-link">Знаки пожарной безопасности</a></li>
+                </ul>
+              </li>
+              <li class="header__menu-item"><a href="#" class="header__menu-link">Прайс</a></li>
+              <li class="header__menu-item"><a href="#" class="header__menu-link">Информация</a></li>
+              <li class="header__menu-item"><a href="#" class="header__menu-link">Доставка</a></li>
+              <li class="header__menu-item"><a href="#" class="header__menu-link">Контакты</a></li>
+            </ul>
+          </nav>
+          <a href="#" class="header__link price__link" download>Скачать прайс</a>
+          <p class="header__contacts">
+            <span class="header__contact">8 (8412) 71-03-30,</span>
+            <span class="header__contact">8 (8412) 25-70-04</span>
+          </p>
+        </div>
+      </div>
     </header>
+
+    <article class="promo">
+      <h1 class="visually-hidden">ДорСтройМонтаж</h1>
+      <p class="promo__tagline"><b>Производство и продажа <span>дорожных знаков</span> в Пензе</b></p>
+      <p class="promo__description">
+        <span>Производство в соответствии ГОСТу.</span><br>
+        <span>Доставка по всей территории России.</span>
+      </p>
+      <button type="button" name="button" class="button promo__button">Оставить заявку</button>
+    </article>
+
     <main>
+      <section class="catalog">
+        <div class="catalog__inner">
+          <h2 class="visually-hidden">Каталог</h2>
+          <ul class="catalog__list">
+            <li class="catalog__item">
+              <a href="#" class="catalog__link">Стандартные дорожные знаки</a>
+            </li>
+            <li class="catalog__item">
+              <a href="#" class="catalog__link">Светодиодные дорожные знаки</a>
+            </li>
+            <li class="catalog__item">
+              <a href="#" class="catalog__link">Заградительные светодиодные знаки</a>
+            </li>
+            <li class="catalog__item">
+              <a href="#" class="catalog__link">Временные дорожные знаки</a>
+            </li>
+            <li class="catalog__item">
+              <a href="#" class="catalog__link">Знаки пожарной безопасности</a>
+            </li>
+          </ul>
+        </div>
+      </section>
 
+      <section class="price">
+        <div class="price__inner">
+          <h2 class="price__title">Прайс-лист</h2>
+          <p class="price__text">Наша продукция соответствует техническому регламенту Таможенного союза ТР ТС 014/2011 «О безопасности автомобильных дорог» и имеет соответствующий сертификат.</p>
+          <p class="price__text">Все дорожные знаки производятся в четком соответствии ГОСТ 52290-2004 и ГОСТ 32945-2014</p>
+          <table class="price__table">
+            <thead>
+              <tr>
+                <th rowspan="2">Знаки</th>
+                <th colspan="2">Пленка инженерная, тип А</th>
+                <th colspan="2">Пленка высокоинтенс., тип Б</th>
+                <th colspan="2">Пленка микропризм., тип В</th>
+              </tr>
+              <tr>
+                <th>II типоразмер</th>
+                <th>III типоразмер</th>
+                <th>II типоразмер</th>
+                <th>III типоразмер</th>
+                <th>II типоразмер</th>
+                <th>III типоразмер</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>
+                  <img src="" alt="треугольные знаки">
+                  <span>Все треугольные знаки</span>
+                </th>
+                <th>1250</th>
+                <th>1800</th>
+                <th>1950</th>
+                <th>2970</th>
+                <th>2550</th>
+                <th>4450</th>
+              </tr>
+              <tr>
+                <th>
+                  <img src="" alt="круглые знаки">
+                  <span>Все круглые знаки</span>
+                </th>
+                <th>1300</th>
+                <th>1900</th>
+                <th>1980</th>
+                <th>3500</th>
+                <th>2600</th>
+                <th>4560</th>
+              </tr>
+              <tr>
+                <th>
+                  <img src="" alt="квадратные знаки">
+                  <span>Все квадратные знаки</span>
+                </th>
+                <th>1300</th>
+                <th>1900</th>
+                <th>1980</th>
+                <th>3500</th>
+                <th>2600</th>
+                <th>4560</th>
+              </tr>
+              <tr>
+                <th><img src="" alt="знаки особых предписаний большие">
+                  <span class="visually-hidden">Знаки особых предписаний</span>
+                </th>
+                <th>2954,6</th>
+                <th>4700</th>
+                <th>5500</th>
+                <th>7800</th>
+                <th>6300</th>
+                <th>9850</th>
+              </tr>
+              <tr>
+                <th><img src="" alt="знаки особых предписаний средние">
+                  <span class="visually-hidden">Знаки особых предписаний</span>
+                </th>
+                <th>1300</th>
+                <th>1900</th>
+                <th>1980</th>
+                <th>3500</th>
+                <th>2600</th>
+                <th>4560</th>
+              </tr>
+              <tr>
+                <th>
+                  <img src="" alt="знаки особых предписаний малые">
+                  <span class="visually-hidden">Знаки особых предписаний</span>
+                </th>
+                <th colspan="2">1350</th>
+                <th colspan="2">2560</th>
+                <th colspan="2">3400</th>
+              </tr>
+              <tr>
+                <th>
+                  <img src="" alt="знаки сервиса">
+                  <span class="visually-hidden">Знаки сервиса</span>
+                </th>
+                <th>1850</th>
+                <th>2700</th>
+                <th>3300</th>
+                <th>5450</th>
+                <th>4250</th>
+                <th>6770</th>
+              </tr>
+            </tbody>
+          </table>
+          <a href="#" class="button price__button">Смотреть весь прайс</a>
+          <a href="#" class="price__link" download>Скачать прайс</a>
+        </div>
+      </section>
+
+      <section class="info">
+        <div class="info__inner">
+          <h2 class="visually-hidden">Информация</h2>
+          <div class="info__block info__block--size">
+            <h3 class="info__block-title info__block-title--white">Какой типоразмер выбрать?</h3>
+            <p class="info__block-text info__block-text--white">Компания РусДорЗнак изготавливает знаки всех типоразмеров. Согласно ГОСТ Р 52290-2004 типоразмеры дорожных знаков выбираются в соответствии с таблицей:</p>
+            <a href="#" class="info__block-link info__block-link--white">Смотреть таблицу</a>
+          </div>
+          <div class="info__block info__block--differences">
+            <h3 class="info__block-title">В чем отличия между пленками?</h3>
+            <p class="info__block-text">По ГОСТу есть несколько типов (классов) светоотражающих пленок отличающихся техническими характеристиками (в основном по светоотражению и сроку службы) и местом установки знаков.</p>
+            <a href="#" class="info__block-link">Подробнее</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="advantages">
+        <div class="advantages__inner">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <h3>Почему стоит выбрать нас?</h3>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <h4 class="advantages__item-title">Высокое качество</h4>
+              <p class="advantages__item-description">Контролируем качество продукции на всех этапах производства</p>
+            </li>
+            <li class="advantages__item">
+              <h4 class="advantages__item-title">Изготавливаем по ГОСТу</h4>
+              <p class="advantages__item-description">Вся продукция соответствует нормам ГОСТ и требованиям ГИБДД</p>
+            </li>
+            <li class="advantages__item">
+              <h4 class="advantages__item-title">Сертификат</h4>
+              <p class="advantages__item-description">Вся продукция соответствует нормам ГОСТ и требованиям ГИБДД</p>
+            </li>
+            <li class="advantages__item">
+              <h4 class="advantages__item-title">Оперативность</h4>
+              <p class="advantages__item-description">Контролируем качество продукции на всех этапах производства</p>
+            </li>
+            <li class="advantages__item">
+              <h4 class="advantages__item-title">Гибкая система скидок</h4>
+              <p class="advantages__item-description">Для постоянных заказчиков и крупных партнеров готовы предложить систему скидок и индивидуальные условия</p>
+            </li>
+            <li class="advantages__item">
+              <h4 class="advantages__item-title">Гарантия</h4>
+              <p class="advantages__item-description">На все изделия предоставляется гарантия</p>
+            </li>
+            <li class="advantages__item">
+              <h4 class="advantages__item-title">Доставка</h4>
+              <p class="advantages__item-description">Доставка дорожных знаков осуществляется по всей территории России</p>
+            </li>
+            <li class="advantages__item">
+              <h4 class="advantages__item-title">Монтаж</h4>
+              <p class="advantages__item-description">В индивидуальном порядке готовы оказать услуги по монтажу дорожных знаков</p>
+            </li>
+            <li class="advantages__item">
+              <h4 class="advantages__item-title">Участвуем в госзакупках</h4>
+              <p class="advantages__item-description">Принимаем активное участие в госзакупках и тендерах. Помогаем госзаказчикам с составлением грамотного технического задания, работаем по 44 РФ</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="about">
+        <div class="about__inner">
+          <h2>О нас</h2>
+          <p class="about__text">Компания ООО Дорстроймонтаж занимается изготовлением дорожных знаков всех видов. Здесь вы можете заказать дорожные знаки II и III типоразмеров со светоотражающей поверхностью из световозвращающих пленок типа А, Б или В, а также знаки индивидуального проектирования.Грамотно налаженное производство позволяет изготавливать и доставлять качественную продукцию в максимально короткие сроки.</p>
+        </div>
+      </section>
     </main>
-    <footer class="footer">
 
+    <footer class="footer">
+      <ul class="footer__catalog">
+        <li class="footer__catalog-item">
+          <a href="#" class="footer__catalog-link">Стандартные дорожные знаки</a>
+        </li>
+        <li class="footer__catalog-item">
+          <a href="#" class="footer__catalog-link">Светодиодные дорожные знаки</a>
+        </li>
+        <li class="footer__catalog-item">
+          <a href="#" class="footer__catalog-link">Заградительные светодиодные знаки</a>
+        </li>
+        <li class="footer__catalog-item">
+          <a href="#" class="footer__catalog-link">Временные дорожные знаки</a>
+        </li>
+        <li class="footer__catalog-item">
+          <a href="#" class="footer__catalog-link">Знаки пожарной безопасности</a>
+        </li>
+      </ul>
+      <ul class="footer__nav">
+        <li class="footer__nav-item">
+          <a href="#" class="footer__nav-link">Прайс</a>
+        </li>
+        <li class="footer__nav-item">
+          <a href="#" class="footer__nav-link">Информация</a>
+        </li>
+        <li class="footer__nav-item">
+          <a href="#" class="footer__nav-link">Доставка</a>
+        </li>
+        <li class="footer__nav-item">
+          <a href="#" class="footer__nav-link">Политика конфиденциальности</a>
+        </li>
+      </ul>
+      <ul class="footer__contacts">
+        <li class="footer__contact">Адрес:<br>г. Пенза, ул. Космодемьянской, 5</li>
+        <li class="footer__contact">Телефон:<br>8 (8412) 71-03-30, 25-70-04</li>
+        <li class="footer__contact">E-mail:<br>info@dsm58.ru</li>
+      </ul>
+      <ul class="footer__copyright">
+        <li class="footer__copyright-item">
+          <a class="footer__logo" href="#"><img src="" alt="ДорСтройМонтаж"></a>
+        </li>
+        <li class="footer__copyright-item">© 2019 ДорСтройМонтаж.</li>
+        <li class="footer__copyright-item">Разработка сайта - onlinebees.ru</li>
+      </ul>
     </footer>
   </body>
 </html>
